# funathon-project2

./: .gitignore  .nojekyll  1-ttc.html  1-ttc.qmd  2-rag-generation.html  2-rag-generation.qmd  2-rag-intro.html  2-rag-intro.qmd  2-rag-vdb.html  2-rag-vdb.qmd  2-rag.html  2-rag.qmd  NACE_Rev2.1_Structure_Explanatory_Notes_EN.tsv  README.md  _quarto.yaml  index.html  index.qmd  pyproject.toml  robots.txt  script_pretrained_model.py  search.json  sitemap.xml
.github/workflows/: publish.yaml  tests.yaml
proposal/: proposal.html  proposal.qmd
site_libs/bootstrap/: bootstrap-0bc655c26a65909be5008b078227f1f6.min.css  bootstrap-10001ffb058a23507bc90342e4cf6f50.min.css  bootstrap-3c478c3570eee41e666eee569c2366fc.min.css  bootstrap-dc2128e30616b12987e07a04815558de.min.css
solutions/: 1-ttc.py  2-rag-generation.py  2-rag-vdb.py  2-rag.py
