[project]
name = "funathon-project2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "duckdb>=1.5.0",
    "jupyter-cache>=1.0.1",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "polars>=1.39.0",
    "qdrant-client>=1.17.0",
    "quarto>=0.1.0",
    "s3fs>=2026.2.0",
    "torchtextclassifiers>=1.0.4",
]
