[project]
name = "funathon-project2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "duckdb>=1.5.0",
    "jupyter-cache>=1.0.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "openai>=2.28.0",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "qdrant-client>=1.17.0",
    "quarto>=0.1.0",
]
