[project]
name = "funathon-project2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "duckdb>=1.5.0",
    "ipywidgets>=8.1.8",
    "jupyter-cache>=1.0.1",
    "matplotlib>=3.10.9",
    "mlflow>=1.27.0",
    "plotnine>=0.14.0",
    "protobuf>=3.20,<4",
    "numpy>=2.4.3",
    "openai>=2.28.0",
    "pandas>=3.0.1",
    "polars>=1.39.0",
    "pyarrow>=23.0.1",
    "qdrant-client>=1.17.0",
    "quarto>=0.1.0",
    "s3fs>=2026.2.0",
    "scikit-learn>=1.8.0",
    "tokenizers>=0.22.2",
    "torchtextclassifiers>=1.0.4",
    "transformers>=5.3.0",
]
